fix github logo alignment

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,6 +21,10 @@ header {
   > div {
     display: flex;
   }
+
+  github-logo {
+    display: inherit;
+  }
 }
 
 .snack-bar {
